tests/error/unresolved_array.c
// fail "Undeclared identifier."

struct unresolved a[4];

int main(){
    return 0;
}
